# tr

./: .gitignore  README.md  default.nix  service.nix  shell.nix  tr.cabal
frontend/: build.sh  package.json  shell.nix  webpack.config.js
frontend/src/: app.js  app.tag  index.html  raw.tag  style.css  style.less  vendor.js
frontend2/: package.json  webpack.conf.js
frontend2/src/: app.js  category.js  common.js  debug.js  dictionary.js  index.html  index.js  spinner.js  style.less  translation.js
src/: Common.hs  Main.hs  Settings.hs
