name:                tr
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Al Zohali
maintainer:          zohl@fmap.me
-- copyright:           
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable tr
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends: base >=4.8 && <5.0
               , aeson
               , bytestring
               , containers
               , dictionaries
               , directory
               , filepath
               , hsyslog
               , servant
               , servant-server
               , text
               , time
               , warp
               , warp-autoquit
               , warp-socket-activation

  hs-source-dirs:      src
  default-language:    Haskell2010
